--- a/matriz.html
+++ b/matriz.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
     </a>
     <br>
     <br>
-    <table border="2" cellpadding="10">
+    <table border="10" cellpadding="15">
         <thead>
             <th>Periodos</th>
             <th>Disciplinas</th>
@@ -40,7 +40,24 @@
              </tr>
             <!-- Terceiro Periodo -->
              <tr>
-                <td rowspan="7">Periodo 3</td>
+                <td rowspan="8">Periodo 3</td>
+                <tr><td>Álgebra Linear</td></tr>
+                <tr><td>Programação Orientada a Objetos</td></tr>
+                <tr><td>Projeto Integrador I</td></tr>
+                <tr><td>Banco de Dados I</td></tr>
+                <tr><td>Rede de Computadores</td></tr>
+                <tr><td>Gestão de Processos de Negócio</td></tr>
+                <tr><td>Leitura e Produção Textual I</td></tr>
+             </tr>
+            <!-- Quarto Periodo -->
+             <tr>
+                <td rowspan="7">Perido 4</td>
+                <tr><td>Banco de Dados II</td></tr>
+                <tr><td>Sistemas Operacionais</td></tr>
+                <tr><td>Sociologia</td></tr>
+                <tr><td>Verificação, Validação e Teste de Software</td></tr>
+                <tr><td>Programação para Web III</td></tr>
+                <tr><td>Inovação e Criatividade</td></tr>
              </tr>
             
         </tbody>
