--- a/formulario.html
+++ b/formulario.html
@@ -24,8 +24,15 @@
             <input type="radio" name="turno" id="noite">
             <label for="noite">Noite</label>
         </fieldset><br>
+        <!-- Selecionar Disciplinas -->
+         <select name="course">
+            <option value="SelectCourse">Selecione seu Curso</option>
+            <option value="ADS">Analise e Desenvolvimento de Sistemas</option>
+            <option value="EngSoft">Engenharia de Software</option>
+            <option value="Sistem">Sistemas para Internet</option>
+         </select>
         <!-- Opções para selecionar o seu Periodo -->
-        <select name="semestre">
+        <br><br><select name="semestre">
             <option value="">Selecione o seu Periodo</option>
             <option value="Periodo 1">Periodo 1</option>
             <option value="Periodo 2">Periodo 2</option>
@@ -38,7 +45,17 @@
      <label for="discipline1">Cálculo Diferencial e Integral</label><br>
      <input type="checkbox" id="discipline2" name="discipline2" value="Programming">
      <label for="discipline2">Introdução à Programação</label><br>
+     <input type="checkbox" id="discipline3" name="discipline3" value="Environment">
+     <label for="discipline3">Educação Ambiental e Sustentabilidade</label><br>
+     <input type="checkbox" id="discipline4" name="discipline4" value="Software">
+     <label for="discipline4">Introdução à Engenharia de Software</label><br>
+     <input type="checkbox" id="discipline5" name="discipline5" value="Web">
+     <label for="discipline5">Programação Para Web I</label><br>
+     <input type="checkbox" id="discilpine6" name="discilpine6" value="Computation">
+     <label for="discilpine6">Arquitetura e Organização de Computadores</label>
+
+
      </fieldset>
     </form>
 </body>
-</html>
+</html>                             
