--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +7,12 @@
     
 </head>
 <body>
+    <!-- Título -->
     <header>
         <h1>Cadastro de Aluno!</h1>
         <h3>Coloque apenas as informações certas!</h3>
     </header>
-
+<!-- Login -->
     <form method="post" action="formulario.html">
         <fieldset style="width: 500px; height: 160px">
         <div>
@@ -25,7 +26,8 @@
         <div>
             <label for="password">Digite sua Senha:</label><br>
             <input type="password" id="password" name="password" required>
-        </div><br>
+        </div>
+        <br>
         <a href="formulario.html">
             <button>Login</button>
         </a>
