--- a/matriz.html
+++ b/matriz.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matriz</title>
 </head>
+<!-- Botão de voltar -->
 <body>
     <a href="formulario.html">
         <button>Voltar</button>
     </a>
     <br>
     <br>
-    <table border="10" cellpadding="15">
+    <!-- Tabela -->
+    <table border="5" cellpadding="15">
         <thead>
             <th>Periodos</th>
             <th>Disciplinas</th>
@@ -58,8 +60,7 @@
                 <tr><td>Verificação, Validação e Teste de Software</td></tr>
                 <tr><td>Programação para Web III</td></tr>
                 <tr><td>Inovação e Criatividade</td></tr>
-             </tr>
-            
+             </tr> 
         </tbody>
     </table>
 </body>
