--- a/formulario.html
+++ b/formulario.html
@@ -6,16 +6,9 @@
     <title>Formulário</title>
 </head>
 <body>
-    
-    <a href="matriz.html">
-            <button>Matriz</button>
-        </a>
-        <br>
-        <br>
-
     <form>
     <!-- Campo da escolha de turno -->
-        <fieldset style="width: 400px">
+        <fieldset style="width: 400px" >
             <legend>escolha do turno</legend>
             <input type="radio" name="turno" id="manha" checked>
             <label for="manha">Manhã</label><br>
@@ -23,7 +16,8 @@
             <label for="tarde">Tarde</label><br>
             <input type="radio" name="turno" id="noite">
             <label for="noite">Noite</label>
-        </fieldset><br>
+        </fieldset>
+        <br>
         <!-- Selecionar Disciplinas -->
          <select name="course">
             <option value="SelectCourse">Selecione seu Curso</option>
@@ -32,7 +26,9 @@
             <option value="Sistem">Sistemas para Internet</option>
          </select>
         <!-- Opções para selecionar o seu Periodo -->
-        <br><br><select name="semestre">
+        <br>
+        <br>
+        <select name="semestre">
             <option value="">Selecione o seu Periodo</option>
             <option value="Periodo 1">Periodo 1</option>
             <option value="Periodo 2">Periodo 2</option>
@@ -40,7 +36,7 @@
             <option value="Periodo 4">Periodo 4</option>
         </select><br><br>
         <!-- Disciplinas -->
-        <fieldset style="width: 400px">
+        <fieldset style="width: 400px" required>
      <input type="checkbox" id="discipline1" name="discipline1" value="Cálculo">
      <label for="discipline1">Cálculo Diferencial e Integral</label><br>
      <input type="checkbox" id="discipline2" name="discipline2" value="Programming">
@@ -51,11 +47,22 @@
      <label for="discipline4">Introdução à Engenharia de Software</label><br>
      <input type="checkbox" id="discipline5" name="discipline5" value="Web">
      <label for="discipline5">Programação Para Web I</label><br>
-     <input type="checkbox" id="discilpine6" name="discilpine6" value="Computation">
-     <label for="discilpine6">Arquitetura e Organização de Computadores</label>
-
-
-     </fieldset>
+     <input type="checkbox" id="discipline6" name="discipline6" value="Computation">
+     <label for="discipline6">Arquitetura e Organização de Computadores</label>
+     <!-- Matriz -->
+        <p>Veja a matriz curricular abaixo para saber quais disciplinas tera que pegar:</p>
+        <a href="matriz.html">
+        Clique aqui
+        </a>
+      </fieldset>
+      <!-- TextArea -->
+      <p>Adicione observações sobre você (Necessidades e afins) (opcional)</p>
+      <textarea></textarea>
+      <br>
+      <br>
+      <!-- Enviar & Reset -->
+      <input type="submit">
+      <input type="reset">
     </form>
 </body>
-</html>                             
+</html>
